# biblioatom

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
biblioatom/: __main__.py  cli.py  convert.py  fetch.py
src/biblioatom/: __init__.py  __main__.py  cli.py  config.py  convert.py  errors.py  fetch.py  logging_config.py  models.py  ui.py
src/biblioatom/core/: __init__.py  analyze_structure.py  build_epub.py  clean_workspace.py  convert_to_azw3.py  download_book.py  extract_scan_images.py  fetch_book.py  run_pipeline.py
src/biblioatom/services/: __init__.py  converter.py  epub_builder.py  fetcher.py  html_cleaner.py  image_processor.py  local_fetcher.py  parser.py  progress.py  ris_parser.py  scan_extractor.py  source_utils.py  structure_analyzer.py  workspace.py
src/biblioatom/tools/: __init__.py  tune_scan.py
tests/: conftest.py  test_analyze_structure.py  test_build_epub.py  test_clean_workspace.py  test_cli.py  test_config.py  test_convert.py  test_convert_to_azw3.py  test_converter.py  test_download_book.py  test_epub_builder.py  test_errors.py  test_extract_scan_images.py  test_fetch.py  test_fetch_book.py  test_fetcher.py  test_html_cleaner.py  test_image_processor.py  test_local_fetcher.py  test_logging_config.py  test_models.py  test_parser.py  test_pipeline_integration.py  test_progress.py  test_ris_parser.py  test_run_pipeline.py  test_scan_extractor.py  test_structure_analyzer.py  test_workspace.py
