[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biblioatom"
version = "0.2.0"
description = "Download and convert books from elib.biblioatom.ru"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Victor Goryachko", email = "victor.goryachko@aventusit.eu" },
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pillow>=10.3",
    "ebooklib>=0.18",
    "structlog>=24.1",
    "tenacity>=8.3",
]

[project.scripts]
biblioatom = "biblioatom.cli:main"

[project.urls]
Repository = "https://github.com/vicgor/biblioatom"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biblioatom"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
# Легаси stdlib-модули и их тесты остаются нетронутыми как эталон для
# следующих этапов миграции — исключаем их из линтинга и форматирования.
extend-exclude = [
    "src/biblioatom/cli.py",
    "src/biblioatom/fetch.py",
    "src/biblioatom/convert.py",
    "tests/test_convert.py",
    "tests/test_fetch.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PT", "A"]

[tool.mypy]
python_version = "3.12"
strict = true
# Легаси stdlib-модули (cli/fetch/convert) переносятся на новый стек в следующих
# этапах; пока исключаем их из strict-проверки, чтобы каркас был зелёным.
exclude = [
    "src/biblioatom/cli\\.py",
    "src/biblioatom/fetch\\.py",
    "src/biblioatom/convert\\.py",
    "src/biblioatom/__main__\\.py",
]

[[tool.mypy.overrides]]
module = ["cv2", "numpy.*", "ebooklib.*", "selectolax.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
