[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biblioatom"
version = "0.2.0"
description = "Download and convert books from elib.biblioatom.ru"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Victor Goryachko", email = "victor.goryachko@aventusit.eu" },
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pillow>=10.3",
    "ebooklib>=0.18",
    "structlog>=24.1",
    "tenacity>=8.3",
]

[project.scripts]
biblioatom = "biblioatom.cli:app"

[project.urls]
Repository = "https://github.com/vicgor/biblioatom"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
    # lxml используется в тестах EPUB для парсинга XHTML/OPF и проверки
    # well-formed-структуры (приходит транзитивно с ebooklib, но фиксируем явно).
    "lxml>=5.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biblioatom"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
# Легаси stdlib-модули (fetch/convert) и их тесты остаются нетронутыми как
# исторический эталон — исключаем их из линтинга и форматирования. cli.py и
# __main__.py переписаны на Typer (Этап 6) и снова под линтером.
extend-exclude = [
    "src/biblioatom/fetch.py",
    "src/biblioatom/convert.py",
    "tests/test_convert.py",
    "tests/test_fetch.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PT", "A"]

[tool.mypy]
python_version = "3.12"
strict = true
# Легаси stdlib-модули (fetch/convert) — исторический эталон, исключены из
# strict-проверки. cli.py и __main__.py переписаны на Typer (Этап 6) и проходят
# strict.
exclude = [
    "src/biblioatom/fetch\\.py",
    "src/biblioatom/convert\\.py",
]

[[tool.mypy.overrides]]
module = ["cv2", "numpy.*", "ebooklib.*", "selectolax.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
