[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biblioatom"
version = "0.2.0"
description = "Download and convert books from elib.biblioatom.ru"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Victor Goryachko", email = "victor.goryachko@aventusit.eu" },
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pillow>=10.3",
    "ebooklib>=0.18",
    "structlog>=24.1",
    "tenacity>=8.3",
]

[project.scripts]
biblioatom = "biblioatom.cli:app"

[project.urls]
Repository = "https://github.com/vicgor/biblioatom"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
    # lxml используется в тестах EPUB для парсинга XHTML/OPF и проверки
    # well-formed-структуры (приходит транзитивно с ebooklib, но фиксируем явно).
    "lxml>=5.2",
    "lxml-stubs>=0.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biblioatom"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = []

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PT", "A"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = []

# PIL (Pillow) намеренно НЕ включён в ignore_missing_imports:
# Pillow >= 10 поставляет py.typed и inline-стабы, поэтому mypy проверяет
# вызовы PIL-API напрямую — добавление PIL сюда заглушило бы реальные ошибки.
# cv2, numpy, ebooklib, selectolax собственных стабов не имеют.
[[tool.mypy.overrides]]
module = ["cv2", "numpy.*", "ebooklib.*", "selectolax.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
